Kubernetes/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: default
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30080
  - name: admin
    port: 9901
    targetPort: 9901
    nodePort: 30990
  selector:
    app: envoy
